# ImGui-Unity-Android

./: .gitmodules  build_so.ps1  settings.gradle
app/: build.gradle
app/release/: app-release.apk  output-metadata.json
app/src/androidTest/java/id/akn/imguiunitytouch/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MENU.hpp  native-lib.cpp
app/src/main/cpp/LIBS/KittyMemory/: KittyMemory.cpp  KittyMemory.h  KittyScanner.cpp  KittyScanner.h  KittyUtils.cpp  MemoryBackup.cpp  MemoryBackup.h  MemoryPatch.cpp  MemoryPatch.h
app/src/main/cpp/LIBS/Substrate/: SubstrateDebug.cpp  SubstrateHook.cpp  SubstratePosixMemory.cpp  SymbolFinder.cpp
app/src/main/cpp/Misc/: ImGuiUtils.h  JNIHooks.h  JNIUtils.hpp  Utils.h  log.h  obfuscate.h
app/src/main/java/id/akn/imguiunitytouch/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/id/akn/imguiunitytouch/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
